[package]
name = "backit"
version = "0.1.0"
authors = ["jeremyletang <letang.jeremy@gmail.com>"]

[dependencies]
diesel = { version = "0.8.2", default-features = false, optional = true }
#diesel = { git = "https://github.com/jeremyletang/diesel", default-features = false , optional = true}
iron = "0.4.0"
log = "0.3.6"
r2d2 = "0.7.1"
r2d2-diesel = "0.8.0"
#r2d2-diesel = { git = "https://github.com/jeremyletang/r2d2-diesel" }
serde = "0.8.19"
serde_json = "0.8.3"
serde_derive = "0.8.19"
time = "0.1.35"
unicase = "1.4.0"

[features]
default = ["postgres"]
postgres = ["diesel"]
sqlite = ["diesel"]
